# esslayit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
docs/project-plan/: visual-and-character-direction.md
esslayit/: __init__.py  __main__.py  models.py  rules.py  server.py
esslayit/webapp/: index.html
esslayit/webapp/static/: app.js  styles.css
tests/: test_rules.py  test_server.py
